vlib/v/checker/tests/struct_implements_non_interface_err.vv
struct Walker implements Abcde {
	aaa string
}

fn main() {}
